@@ -127,6 +127,13 @@ config OVMS_VEHICLE_TESLAROADSTER
     help
         Enable to include support for Tesla Roadster vehicles.
 
+config OVMS_VEHICLE_TESLAMODELS
+    bool "Include support for Tesla Model S vehicles"
+    default y
+    depends on OVMS
+    help
+        Enable to include support for Tesla Model S vehicles.
+
 config OVMS_VEHICLE_NISSANLEAF
     bool "Include support for Nissan Leaf vehicles"
     default y
